just committing again before another attempt at Heroku deployment

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -157,6 +157,10 @@
     </div>
   </div>
 
+
+<!--jquery-->
+
+
   <script type="text/javascript">
     var config = {
       ".chosen-select": {},
